@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-25T01:37:18Z",
+  "timestamp" : "2025-05-26T01:24:32Z",
   "count_outdated" : 1854,
   "uniques_outdated" : 1094,
-  "count" : 1863,
-  "uniques" : 1103,
+  "count" : 1864,
+  "uniques" : 1104,
   "clones" : [
     {
       "timestamp": "2025-05-13T00:00:00Z",
@@ -79,6 +79,15 @@
     },
     {
       "timestamp": "2025-05-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
