@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 1,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2025-05-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
